[gd_scene load_steps=2 format=3 uid="uid://citp17ehrbq2"]

[ext_resource type="Script" uid="uid://bigsdf10fnuqp" path="res://scripts/UI/main_menu.gd" id="1_qwnig"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qwnig")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0227793, 0.0492689, 0.0523594, 0.176471)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 614.0
offset_top = 255.0
offset_right = 769.0
offset_bottom = 396.0
scale = Vector2(4, 4)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "START"

[node name="SettingButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SETTING"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
